--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
 			let env;
 			let envFolder = './env'
 			let envTextureFiles = [
-				'01_nature_day_4096.png',
-				'js_environment01.png',
-				'js_environment02.png'
+				'test1.png',
+				'js_environment01.png'
 			]
 			let envTextures = [];
 			let envOrder = 0;
