--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			let envFolder = './env'
 			let envTextureFiles = [
 				'test1.png',
-				'js_environment01.png'
+				'01_nature_day_4096.png'
 			]
 			let envTextures = [];
 			let envOrder = 0;
