--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			let envFolder = './env'
 			let envTextureFiles = [
 				'test1.png',
+				'test2.png',
 				'01_nature_day_4096.png'
 			]
 			let envTextures = [];
