--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 			let env;
 			let envFolder = './env'
 			let envTextureFiles = [
-				'test1.png',
-				'test2.png',
-				'01_nature_day_4096.png'
+				'car02.png',
+				'car03.png',
+				'sofa01.png',
+				'bag01.png'
 			]
 			let envTextures = [];
 			let envOrder = 0;
