--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 			let envTextureFiles = [
 				'car02.png',
 				'sofa01.png',
-				'bag01.png'
+				'bag01.png',
+				'refri01.png'
 			]
 			let envTextures = [];
 			let envOrder = 0;
