--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
 			let env;
 			let envFolder = './env'
 			let envTextureFiles = [
-				'car 001.png',
-				'sofa01.png',
-				'bag01.png',
-				'refri01.png'
+				'car.png',
+				'sofa.png',
+				'bag.png'
 			]
 			let envTextures = [];
 			let envOrder = 0;
