--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			let env;
 			let envFolder = './env'
 			let envTextureFiles = [
-				'car.png',
-				'sofa.png',
+				'car01.png',
+				'sofa01.png',
 				'bag.png'
 			]
 			let envTextures = [];
