--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			// =================================================================
 			// 		Add your own panorama image with envFiles.push(filepath)
 			// =================================================================
-			envFiles.push('bag01.jpg');
+			envFiles.push('bag01.png');
 			envFiles.push('bespoke01.png');
 			envFiles.push('car01.png');
 			envFiles.push('sofa01.png');
