--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			qFiles.push('survey01.png');
 			qFiles.push('survey02.png');
 			qFiles.push('survey03.png');
-			qFiles.push('survey04.png');
+			// qFiles.push('survey04.png');
 
 			init();
 			setController();
